# OrderService_v2

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/2026/02/: 02_0028_03_bbaba46ec06b_initial_migration.py
src/app/: main.py
src/app/application/dto/: __init__.py  batch.py  contracts.py  order.py
src/app/application/interfaces/: __init__.py  repository.py  uow.py
src/app/application/use_cases/: create_order.py
src/app/domain/entities/: batch.py
src/app/domain/exceptions/: base.py  batch.py
src/app/domain/services/: batch.py
src/app/domain/value_objects/: __init__.py  batch_id.py  order_line.py
src/app/infrastructure/ioc/: __init__.py  container.py  providers.py
src/app/infrastructure/persistence_sqla/: session.py  uow.py
src/app/infrastructure/persistence_sqla/mappers/: __init__.py  batch.py  contracts.py
src/app/infrastructure/persistence_sqla/models/: __init__.py  allocations.py  base.py  batch.py  order.py  order_line.py
src/app/infrastructure/persistence_sqla/repository/: __init__.py  allocations.py  base.py  batch.py  order.py  order_line.py
src/app/presentation/api/v1/routers/: batch.py  orders.py
src/app/setup/config/: __init__.py  session.py  settings.py
tests/app/unit/domain/entities/: batch.py  conftest.py
tests/app/unit/domain/services/: batch.py  conftest.py
tests/app/unit/infrastructure/mappers/: batch.py  conftest.py
tests/app/unit/infrastructure/repositories/: batch.py  conftest.py
(+2 files in other folders)
